# JAM

./: .gitignore  README.md  Schedule.txt
code/: CMakeLists.txt  spec-cmake.sh
code/include/: LeaderManager.cpp  LeaderManager.h  callable.h  central_queues.h  client_info.h  client_manager.h  concurrent_queue.h  concurrent_ticket.h  config.h  hold_queue.h  jam.h  leader_manager.h  module_coordinator.h  payload.h  payload_secure.h  serializer_helper.h  stream_communicator.h  stress_tester.h  udp_reader.h  udp_wrapper.h  udp_writer.h  user_handler.h
code/src/: LeaderManager.cpp  callable.cpp  central_queues.cpp  client_info.cpp  client_manager.cpp  hold_queue.cpp  jam.cpp  leader_manager.cpp  main.cpp  module_coordinator.cpp  payload.cpp  payload_secure.cpp  serializer_helper.cpp  stress_tester.cpp  udp_reader.cpp  udp_wrapper.cpp  udp_writer.cpp  user_handler.cpp
code/src/dev/: dev_b.cpp  dev_c.cpp  dev_h.cpp  dev_h_1.cpp  dev_h_2.cpp  dev_h_3.cpp
code/test/: test_hold_queue.cpp  test_jam_1.cpp  test_udp_wrapper.cpp
docs/: planning.xlsx
docs/figures/: modules.vsdx  states.vsdx
shared/: packets.ini  packetsender_export.ini
